--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.thanks">
+    package="com.thanks.thanks">
    <application
         android:label="شكر"
         android:icon="@mipmap/launcher_icon">
