--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,10 @@ dependencies:
   splashscreen: ^1.3.5
   international_phone_input: ^1.0.4
   flutter_statusbarcolor: ^0.2.3
-
-
-
+  google_sign_in: ^4.4.3
+  firebase_auth: ^0.14.0+8
+  firebase_core: ^0.4.1+3
+  cloud_firestore: ^0.12.10
   shared_preferences: any
   flutter_rating_bar: ^3.2.0+1
   pin_entry_text_field: ^0.1.4
@@ -56,9 +57,8 @@ dependencies:
   geocoding: ^1.0.5
   geocoder: ^0.2.1
   map_controller: ^0.9.0
+  firebase_messaging: ^5.1.4
   flutter_local_notifications:
-
-
   riverpod: ^0.12.4
 
 
